--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.32.5",
     "@react-three/fiber": "^8.8.7",
+    "bitecs": "^0.3.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.145.0"
