--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.32.5",
     "@react-three/fiber": "^8.8.7",
     "bitecs": "^0.3.38",
+    "planck": "^1.0.0-alpha.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.145.0"
